--- a/MySampled/View/Main.storyboard
+++ b/MySampled/View/Main.storyboard
@@ -5,29 +5,64 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="ViewController" customModule="MySampled" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="Y6W-OH-hqX" customClass="HomeViewController" customModule="MySampled" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5E1-Hd-BKE">
+                                <rect key="frame" x="90" y="697" width="213" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="c53-Bs-foR"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" red="0.92954308220000004" green="0.77705107179999999" blue="0.25519273689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <buttonConfiguration key="configuration" style="filled" title="Commencer">
+                                    <backgroundConfiguration key="background" cornerRadius="20"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseBackgroundColor" red="0.92954308220000004" green="0.71451972050000001" blue="0.2141108216" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="passOtherView:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="I5A-H2-RSx"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homepage" translatesAutoresizingMaskIntoConstraints="NO" id="rYD-vT-QZt">
+                                <rect key="frame" x="16" y="300" width="361" height="263"/>
+                                <color key="backgroundColor" red="0.078431375319999996" green="0.1215686351" blue="0.1607843041" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="263" id="Cd6-be-KTw"/>
+                                    <constraint firstAttribute="width" constant="361" id="Cwv-5W-Kfq"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.078431375319999996" green="0.1215686351" blue="0.1607843041" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="rYD-vT-QZt" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" constant="5.5" id="47a-49-0r8"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="5E1-Hd-BKE" secondAttribute="trailing" constant="90" id="ZWd-DE-YTj"/>
+                            <constraint firstItem="rYD-vT-QZt" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="ajk-Sr-agc"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="5E1-Hd-BKE" secondAttribute="bottom" constant="70" id="jmL-nm-BKQ"/>
+                            <constraint firstItem="5E1-Hd-BKE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="90" id="mEb-Ov-KKr"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="beginButton" destination="5E1-Hd-BKE" id="plA-Ef-XYP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="-17"/>
+            <point key="canvasLocation" x="135.1145038167939" y="-17.605633802816904"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="homepage" width="1792" height="1024"/>
     </resources>
 </document>
